--- a/develop_libs/index.html
+++ b/develop_libs/index.html
@@ -216,14 +216,7 @@
 <p>&nbsp;</p>
 
 <div class="bdzn-search">
-<script type="text/javascript">
-	(function(){
-		document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));
-		var bdcs = document.createElement('script');bdcs.type = 'text/javascript';
-		bdcs.async = true;
-		bdcs.src = 'http://znsv.baidu.com/customer_search/api/js?sid=3969809418513435361' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(bdcs, s);
-	})();
-</script>
+<script type="text/javascript">(function(){document.write(unescape('%3Cdiv id="bdcs"%3E%3C/div%3E'));var bdcs = document.createElement('script');bdcs.type = 'text/javascript';bdcs.async = true;bdcs.src = 'http://znsv.baidu.com/customer_search/api/js?sid=3969809418513435361' + '&plate_url=' + encodeURIComponent(window.location.href) + '&t=' + Math.ceil(new Date()/3600000);var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(bdcs, s);})();</script>
 </div>
 
 </div>
